--- a/PhotoCollection_iOS16/Base.lproj/Main.storyboard
+++ b/PhotoCollection_iOS16/Base.lproj/Main.storyboard
@@ -69,6 +69,7 @@
                                 <connections>
                                     <outlet property="imageView" destination="UPR-6p-FfA" id="7eR-3r-F0V"/>
                                     <outlet property="titleLabel" destination="hGD-W8-oPJ" id="kMu-hf-VkN"/>
+                                    <segue destination="bzs-T3-VmN" kind="show" identifier="photoCellShowSegue" id="aDh-1l-3Ib"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -98,26 +99,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Sb-BN-onZ">
-                                <rect key="frame" x="87" y="145" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hK7-Vl-kME">
-                                <rect key="frame" x="171" y="304" width="72" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Add Photo"/>
-                            </button>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fU4-yU-uUm">
-                                <rect key="frame" x="159" y="378" width="97" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="KyO-qh-KUx">
+                                <rect key="frame" x="82" y="145" width="250" height="330"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9Sb-BN-onZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="250" height="250"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="9Sb-BN-onZ" secondAttribute="height" multiplier="1:1" id="Ssl-Ui-qn1"/>
+                                            <constraint firstAttribute="width" constant="250" id="a9j-iN-ISZ"/>
+                                            <constraint firstAttribute="height" constant="250" id="hnZ-eE-vVV"/>
+                                        </constraints>
+                                    </imageView>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fU4-yU-uUm">
+                                        <rect key="frame" x="0.0" y="258" width="250" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hK7-Vl-kME">
+                                        <rect key="frame" x="0.0" y="300" width="250" height="30"/>
+                                        <state key="normal" title="Add Photo"/>
+                                        <connections>
+                                            <action selector="addPhotoButton:" destination="bzs-T3-VmN" eventType="touchUpInside" id="Xn9-bO-tDL"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="KyO-qh-KUx" firstAttribute="centerX" secondItem="f7H-Pf-TS0" secondAttribute="centerX" id="25D-1k-dab"/>
+                            <constraint firstItem="KyO-qh-KUx" firstAttribute="top" secondItem="zlk-oW-4Vn" secondAttribute="top" constant="57" id="tb1-I3-snk"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="zlk-oW-4Vn"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Ms2-yg-F3u"/>
+                    <navigationItem key="navigationItem" id="Ms2-yg-F3u">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="At6-aq-i6S">
+                            <connections>
+                                <action selector="saveButtonTapped:" destination="bzs-T3-VmN" id="DEo-Fd-4lZ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="imageView" destination="9Sb-BN-onZ" id="5dR-RX-zIQ"/>
+                        <outlet property="textField" destination="fU4-yU-uUm" id="HqX-0n-agE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zA9-xw-baz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -142,4 +167,7 @@
             <point key="canvasLocation" x="69.565217391304358" y="131.91964285714286"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="aDh-1l-3Ib"/>
+    </inferredMetricsTieBreakers>
 </document>
