--- a/PhotoCollection_iOS16/Base.lproj/Main.storyboard
+++ b/PhotoCollection_iOS16/Base.lproj/Main.storyboard
@@ -79,7 +79,11 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="GCF-LL-Jc7">
-                        <barButtonItem key="leftBarButtonItem" title="Select Theme" id="aXd-jS-ARX"/>
+                        <barButtonItem key="leftBarButtonItem" title="Select Theme" id="aXd-jS-ARX">
+                            <connections>
+                                <segue destination="DUi-7z-Irk" kind="presentation" identifier="selectThemeModalSegue" id="BMR-6a-jpy"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="ch5-YH-M5h">
                             <connections>
                                 <segue destination="bzs-T3-VmN" kind="show" identifier="addPhotoShowSegue" id="fA1-ok-imA"/>
@@ -146,7 +150,60 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zA9-xw-baz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1763.7681159420292" y="131.91964285714286"/>
+            <point key="canvasLocation" x="2496" y="132"/>
+        </scene>
+        <!--Theme Selection View Controller-->
+        <scene sceneID="ILB-Bk-GX2">
+            <objects>
+                <viewController id="DUi-7z-Irk" customClass="ThemeSelectionViewController" customModule="PhotoCollection_iOS16" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ort-XK-Qyi">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="51" translatesAutoresizingMaskIntoConstraints="NO" id="BWA-k1-auA">
+                                <rect key="frame" x="129.5" y="50" width="155" height="101.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a theme" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1gI-gc-9Of">
+                                        <rect key="frame" x="0.0" y="0.0" width="155" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="92" translatesAutoresizingMaskIntoConstraints="NO" id="P6t-8X-HxS">
+                                        <rect key="frame" x="0.0" y="71.5" width="155" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tue-g0-L2o">
+                                                <rect key="frame" x="0.0" y="0.0" width="33" height="30"/>
+                                                <state key="normal" title="Dark"/>
+                                                <connections>
+                                                    <action selector="selectDarkTheme:" destination="DUi-7z-Irk" eventType="touchUpInside" id="sv4-UZ-cFh"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8HF-dc-Xgh">
+                                                <rect key="frame" x="125" y="0.0" width="30" height="30"/>
+                                                <state key="normal" title="Pink"/>
+                                                <connections>
+                                                    <action selector="selectPinkTheme:" destination="DUi-7z-Irk" eventType="touchUpInside" id="9Cr-9z-Dsz"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="BWA-k1-auA" firstAttribute="centerX" secondItem="Ort-XK-Qyi" secondAttribute="centerX" id="M6z-dH-cd9"/>
+                            <constraint firstItem="LYr-ZH-rsi" firstAttribute="trailing" secondItem="BWA-k1-auA" secondAttribute="trailing" constant="129.5" id="QW6-BY-eAB"/>
+                            <constraint firstItem="BWA-k1-auA" firstAttribute="top" secondItem="LYr-ZH-rsi" secondAttribute="top" constant="50" id="df6-Zd-zNc"/>
+                            <constraint firstItem="BWA-k1-auA" firstAttribute="leading" secondItem="LYr-ZH-rsi" secondAttribute="leading" constant="129.5" id="oq8-zJ-Xwu"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="LYr-ZH-rsi"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7sx-HE-Xjd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1739" y="-250"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="TU1-lb-b9b">
